force-app/main/default/objects/Apttus_Config2__LegalEntity__c/Apttus_Config2__LegalEntity__c.object-meta.xml
<CustomObject>
    <description>Represents a legal entity</description>
    <label>Legal Entity</label>
    <nameField>
        <displayFormat>LE-{00000000}</displayFormat>
        <label>Legal Entity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>