force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Billing__FromEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FromEmailAddress__c</fullName>
    <description>The optional Email address that will override the &quot;Billing Org-Wide Email Address&quot; when emailing Invoice and Credit Memo attachments.</description>
    <inlineHelpText>The optional Email address that will override the &quot;Billing Org-Wide Email Address&quot; when emailing Invoice and Credit Memo attachments.</inlineHelpText>
    <label>From Email Address</label>
    <type>Email</type>
</CustomField>