force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AddressLine3__c</fullName>
    <description>The Legal Entity Address Line 3</description>
    <inlineHelpText>The Legal Entity Address Line 3</inlineHelpText>
    <label>Legal Entity Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>