force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__City__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__City__c</fullName>
    <description>The Legal Entity City</description>
    <inlineHelpText>The Legal Entity City</inlineHelpText>
    <label>Legal Entity City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>