force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CompanyCode__c</fullName>
    <description>The company code</description>
    <inlineHelpText>The company code</inlineHelpText>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>