force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CountryCode__c</fullName>
    <description>The Legal Entity Country Code</description>
    <inlineHelpText>The Legal Entity Country Code</inlineHelpText>
    <label>Legal Entity Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apttus_Config2__Countries</valueSetName>
    </valueSet>
</CustomField>