force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__LegalEntityName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LegalEntityName__c</fullName>
    <description>The descriptive name of the legal entity</description>
    <externalId>true</externalId>
    <inlineHelpText>The descriptive name of the legal entity</inlineHelpText>
    <label>Entity Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>