force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PostalCode__c</fullName>
    <description>The Legal Entity Postal Code</description>
    <inlineHelpText>The Legal Entity Postal Code</inlineHelpText>
    <label>Legal Entity Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>