force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__Telephone__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Telephone__c</fullName>
    <description>The Legal Entity Phone Number</description>
    <inlineHelpText>The Legal Entity Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>