force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__VATEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__VATEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether VAT is enabled for the legal entity</description>
    <inlineHelpText>Indicates whether VAT is enabled for the legal entity</inlineHelpText>
    <label>VAT Enabled ?</label>
    <type>Checkbox</type>
</CustomField>