force-app/main/default/objects/Apttus_Config2__LegalEntity__c/fields/Apttus_Config2__Website__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Website__c</fullName>
    <description>The Legal Entity Website Address</description>
    <inlineHelpText>The Legal Entity Website Address</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>