force-app/main/default/objects/Apttus_Config2__LegalEntity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__LegalEntityName__c</columns>
    <columns>Apttus_Config2__IsDefault__c</columns>
    <columns>Apttus_Config2__CompanyCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>